expand Kotlin overview
Add some additional info for Kotlin

--- a/overviews.html
+++ b/overviews.html
@@ -318,6 +318,13 @@
         },
         {
           i: 'kotlin', n: 'Kotlin', h: 'https://kotlinlang.org/',
+          w: 'Kotlin_(programming_language)',
+          d: 'Kotlin is a Java-interoperable language intended to be a "better Java".  Its key contribution is its treatment of nullable vs non-nullable values',
+          f: 2011,
+          v: ['1.0 (2016)'],
+          r: 'Nullables', 'Interoperability with Java',
+          u: 'Replacing Java',
+          t: ['Object-oriented', 'Static']
         },
         {
           i: 'lolcode', n: 'LOLCODE', h: 'http://lolcode.org/',
