--- a/overviews.html
+++ b/overviews.html
@@ -322,7 +322,7 @@
           d: 'Kotlin is a Java-interoperable language intended to be a "better Java".  Its key contribution is its treatment of nullable vs non-nullable values',
           f: 2011,
           v: ['1.0 (2016)'],
-          r: 'Nullables', 'Interoperability with Java',
+          r: 'Nullables, Interoperability with Java',
           u: 'Replacing Java',
           t: ['Object-oriented', 'Static']
         },
