--- a/overviews.html
+++ b/overviews.html
@@ -287,6 +287,7 @@
         {
           i: 'java', n: 'Java', h: 'https://www.oracle.com/java/',
           d: 'Java is an extremely popular enterprise programming language, designed with, among other things, thread-based concurrency and security in mind.',
+          w: 'Java_(programming_language)', g: 'java', rc: 'Java', pp: 'java',
           f: 1995,
           v: ['1.1 (1997)', '5 (2004)', '8 (2014)', '9 (2017)'],
           r: 'Classes, Threads, Mature platform',
@@ -296,6 +297,7 @@
         {
           i: 'javascript', n: 'JavaScript',
           d: 'JavaScript interpreters exist in every major web browser.',
+          w: 'JavaScript', g: 'javascript', rc: 'JavaScript', pp: 'javascript',
           f: '1995', v: ['ES3 (1999)', 'ES5 (2000)', 'ES2015 (2015)'],
           r: 'First-class functions, Weak typing, Prototypes',
           u: 'Web application clients, Asynchronous servers',
@@ -304,6 +306,7 @@
         {
           i: 'julia', n: 'Julia', h: 'http://julialang.org/',
           d: 'Julia is a modern language for scientific and technical computing.',
+          w: 'Julia_(programming_language)', g: 'julia', rc: 'Julia',
           f: 2012,
           v: ['0.4 (2015)', '0.5 (2016)'],
           r: 'Multi-dispatch, Macros, Multicore support',
@@ -318,8 +321,8 @@
         },
         {
           i: 'kotlin', n: 'Kotlin', h: 'https://kotlinlang.org/',
-          w: 'Kotlin_(programming_language)',
-          d: 'Kotlin is a Java-interoperable language intended to be a "better Java".  Its key contribution is its treatment of nullable vs non-nullable values',
+          w: 'Kotlin_(programming_language)', g: 'kotlin', rc: 'Kotlin',
+          d: 'Kotlin is a Java-interoperable language intended to be a &ldquo;better Java.&rdquo; Its key contribution is its treatment of nullable vs non-nullable values',
           f: 2011,
           v: ['1.0 (2016)'],
           r: 'Nullables, Interoperability with Java',
@@ -332,6 +335,7 @@
         {
           i: 'lua', n: 'Lua', h: 'https://www.lua.org/',
           d: 'Lua is a powerful, fast, lightweight, embeddable scripting language.',
+          w: 'Lua_(programming_language)', g: 'lua', rc: 'Lua', pp: 'lua',
           f: 1993,
           v: ['5.0 (2003)', '5.1 (2006)', '5.2 (2011)', '5.3 (2015)'],
           r: 'Tables, Interoperability with C',
