Refactor overviews page

--- a/more-exercises.html
+++ b/more-exercises.html
@@ -93,6 +93,8 @@
         <ol class="exercises">
           <li>Implement <a href="https://web.cs.wpi.edu/~kfisler/Pubs/icer14-rainfall/icer14.pdf">Kathi Fisler&rsquo;s modification of the mildly famous Rainfall Problem</a> in as many languages as you can.
 
+          <li>In his <a href="http://worrydream.com/ScrubbingCalculator/"><i>Scrubbing Calculator</i></a> essay, Bret Victor says &ldquo;We are accustomed to assuming that variables must be symbols. But this isn&rsquo;t true&mdash;a variable is simply a number that varies. If we are able to vary numbers interactively, then we don&rsquo;t necessarily need to name them.&rdquo; Read this essay (and the related <i>Kill Math</i> and <i>Ten Brighter Ideas</i> essays). Is it possible for a programming language to be defined in which variables are something other than named containers for values (or names bound to values)? Or must a language use symbols while scrubbing remains a technique relegated to the environment?
+
           <li>What is <em>flow typing</em> (a.k.a. <em>flow-sensitive typing</em>)? What was the first language considered to employ this style? Which more well-known languages picked it up?
 
           <li>What is <em>gradual typing</em>?
