Add link to Crystal language

--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
         <a href="https://mercurylang.org/">Mercury</a> &bull;
         <a href="http://www.wakelang.com/">Wake</a> &bull;
         <a href="http://roy.brianmckenna.org/">Roy</a> &bull;
+        <a href="https://crystal-lang.org/">Crystal</a> &bull;
         <a href="http://www.impredicative.com/ur/">Ur</a> &bull;
         <a href="http://www.mathstat.dal.ca/~selinger/quipper/">Quipper</a> &bull;
         <a href="http://www.purescript.org/">PureScript</a> &bull;
