--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
         <a href="https://quorumlanguage.com/">Quorum<a>
       </ul>
 
+      <p>Just for fun, we&rsquo;ve gotten started on <a href="overviews.html">a
+      little &ldquo;browser&rdquo; of language highlights</a> for each of the
+      languages from the book and many others as well.</p>
+
       <div class="sectionheading">Errata</div>
 
       <p>We&rsquo;ll list the mistakes in the book right here as they come in.
