Little writing tweaks

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
         &copy; 2017 <a href="https://www.crcpress.com/">CRC Press</a>
       </div>
 
-      <p class="summary">This text covers the standard programming language
+      <p class="summary">This text covers various programming language
       concepts, including binding, scope, typing, parameterization, modularity,
       concurrency, and meta&shy;programming&mdash;not with a list of explanations
       of each topic, but rather within the context of whole-language overviews
-      with plenty of runnable example programs. We aim to help developers
+      containing plenty of runnable example programs. We aim to help developers
       learn a bit of theory, and introduce students to a number of modern
       languages. All of the source code for the book&rsquo;s examples, as
-      well as number of bonus scripts, are found in
+      well as number of bonus scripts, reside in
       <a href="https://github.com/rtoal/ple">a GitHub repository</a>.</p>
 
 
