--- a/more-exercises.html
+++ b/more-exercises.html
@@ -120,6 +120,8 @@
           <li><a href="http://lucacardelli.name/papers/onunderstanding.a4.pdf">Cardelli and Wegner&rsquo; 1985 paper</a> refined Strachey&rsquo;s distinction between parametric and ad-hoc polymorphism into a four-category scheme with parametric, inclusion, overloading, and coercion. Give examples of each in Java or C# (or any similar language). How would you classify Julia&rsquo;s multimethods?
 
           <li>Find at least three distinct, but relatively recent, definitions of the term <i>object oriented</i>. How do these differ from each other and from <a href="https://www.quora.com/What-is-Alan-Kays-definition-of-Object-Oriented/answer/Alan-Kay-11"> the original idea for which the term was coined</a>? (Note that the fact the term has evolved over the years does not mean that modern usage is necessarily wrong.)
+
+          <li>The languages Go, Rust, Swift, Julia, and C# each have type systems with both signed and unsigned integers. Each language also features sequence types with a built in length method (with a name such as <var>len</var>, <var>length</var>, <var>size</var>, or <var>count</var>). For each language, determine whether the length method returns a signed or unsigned value. Why might a language designer choose to return a signed value in this case?
         <ol>
       </div>
 
