Better wording on the more exercises page

--- a/more-exercises.html
+++ b/more-exercises.html
@@ -86,7 +86,7 @@
 
       <div class="sectionheading">Additional Exercises</div>
 
-        <p>If you&rsquo;ve found a (or enhanced your existing) passion for programming languages by working on the 300 exercises in the text, we figured you might like to continue both practicing your skills and exploring many topics we were not able to include in the printed book. So we&rsquo;ve decided to keep a growing list of fun, interesting, and challenging problems here.</p>
+        <p>If you&rsquo;ve found a passion (or enhanced your existing passion) for programming languages by working on the 300 exercises in the text, you might like to continue practicing your skills and even explore new topics we were not able to include in the printed book. So we&rsquo;ve decided to put together a growing list of fun, interesting, and sometimes challenging problems here.</p>
 
         <p>(If you&rsquo;d like to contribute some of your own, please contact one of the authors or create a pull request.)</p>
 
