Better wording on the more exercises page

--- a/more-exercises.html
+++ b/more-exercises.html
@@ -121,7 +121,7 @@
 
           <li>Find at least three distinct, but relatively recent, definitions of the term <i>object oriented</i>. How do these differ from each other and from <a href="https://www.quora.com/What-is-Alan-Kays-definition-of-Object-Oriented/answer/Alan-Kay-11"> the original idea for which the term was coined</a>? (Note that the fact the term has evolved over the years does not mean that modern usage is necessarily wrong.)
 
-          <li>The languages Go, Rust, Swift, Julia, and C# each have type systems with both signed and unsigned integers. Each language also features sequence types with a built in length method (with a name such as <var>len</var>, <var>length</var>, <var>size</var>, or <var>count</var>). For each language, determine whether the length method returns a signed or unsigned value. Why might a language designer choose to return a signed value in this case?
+          <li>The languages Go, Rust, Swift, Julia, and C# all have type systems with both signed and unsigned integers. Each language also features sequence types with a predefined length method (perhaps called <var>len</var>, <var>length</var>, <var>size</var>, or <var>count</var>). For each language, find out whether the length-determining method returns a signed or unsigned value. Why might a language designer choose to return a signed value?
         <ol>
       </div>
 
