Link to book replacement pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       #bottomline {
         border-top: 2px solid #ffa0e4;
         margin-top: 40px;
-        padding: 20px 50px 0 50px;
+        padding: 20px 40px 0 50px;
         text-align: center;
       }
       .errata-item, ol.exercises > li {
@@ -380,14 +380,13 @@
       <ul>
       <li><b>Changes due to evolution of Swift</b>. The first printing took place when Swift 3 was in beta. The release version of Swift 3 included significant language changes, requiring several scripts and a couple pages to be rewritten.
         <ul>
-        <li><b>Page 2, third script</b>. Remove <tt>combine:</tt>.
+        <li><b>Page 2, third script</b>, and <b>Page 258</b>. Remove <tt>combine:</tt> in <tt>reduce</tt> call.
         <li><b>Page 244, second script</b>. Replace <tt>Process</tt> with <tt>CommandLine</tt>.
         <li><b>Page 253, second script</b>. Replace <tt>ErrorProtocol</tt> with <tt>Error</tt>, and make the same replacement in the text of line 3 of the following page.
-        <li><b>Page 254-256</b>. The mechanisms for operator precedence and the definitions of custom operators have been drastically changed. Replacement pages are here (TODO - link).
         <li><b>Page 255</b>. The argument to <tt>String()</tt> must now be prefixed with <tt>describing:</tt>.
-        <li><b>Page 258</b>. Remove <tt>combine:</tt> from the script.
+        <li><b>Page 254-256</b>. The mechanisms for operator precedence have been drastically changed. <a href="resources/book-replacement-pages/swift3updates.pdf">Download replacement pages for the book</a>.
         </ul>
-      <li><b>Typographical, spelling, and grammar errors</b>.
+      <li><b>Typographical, spelling, and grammar errors</b>. We&rsquo;re not aware of any just yet....
       </ul>
 
 
@@ -413,6 +412,7 @@
         <img src="resources/chapel-logo-24.png" title="Chapel">
         <img src="resources/clojure-logo-24.png" title="Clojure">
         <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
+        <img src="resources/commonlisp-logo-24.png" title="CommonLisp">
         <img src="resources/cpp-logo-24.png" title="C++">
         <img src="resources/csharp-logo-24.png" title="C#">
         <img src="resources/d-logo-24.png" title="D">
@@ -451,6 +451,7 @@
         <img src="resources/scala-logo-24.png" title="Scala">
         <img src="resources/scratch-logo-24.png" title="Scratch">
         <img src="resources/smalltalk-logo-24.png" title="Smalltalk">
+        <img src="resources/snap-logo-24.png" title="Snap!">
         <img src="resources/sml-logo-24.png" title="Standard ML">
         <img src="resources/swift-logo-24.png" title="Swift">
         <img src="resources/tcl-logo-24.png" title="Tcl">
