Add Ciao to additional resources

--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
         <a href="http://nemerle.org/About">Nemerle</a> &bull;
         <a href="http://kittenlang.org/">Kitten</a> &bull;
         <a href="https://mercurylang.org/">Mercury</a> &bull;
-        <a href="http://www.wakelang.com/">Wake</a> &bull;
+        Wake &bull;
+        <a href="http://ciao-lang.org/">Ciao</a> &bull;
         <a href="http://roy.brianmckenna.org/">Roy</a> &bull;
         <a href="https://crystal-lang.org/">Crystal</a> &bull;
         <a href="http://www.impredicative.com/ur/">Ur</a> &bull;
