Add exercise on JPred

--- a/more-exercises.html
+++ b/more-exercises.html
@@ -86,7 +86,7 @@
 
       <div class="sectionheading">Additional Exercises</div>
 
-        <p>If you&rsquo;ve found a passion (or enhanced your existing passion) for programming languages by working on the 300 exercises in the text, you might like to continue practicing your skills and even explore new topics we were not able to include in the printed book. So we&rsquo;ve decided to put together a growing list of fun, interesting, and sometimes challenging problems here.</p>
+        <p>If you&rsquo;ve found a passion&mdash;or enhanced your existing passion&mdash;for programming languages by working on the 300 exercises in the text, you might like to continue practicing your skills and even explore new topics we were not able to include in the printed book. So we&rsquo;ve decided to put together a growing list of fun, interesting, and sometimes challenging problems here.</p>
 
         <p>(If you&rsquo;d like to contribute some of your own, please contact one of the authors or create a pull request.)</p>
 
@@ -125,6 +125,7 @@
 
           <li>We covered both 32-bit (single-precision) and 64-bit (double-precision) floating point type in our appendix on numbers. However, some languages include <em>minifloats</em>, <em>quadruple-precision</em>, and <em>octuple-precision</em> floats. For each type, give the number of bits in the representation, as well as the largest possible representable value.
 
+          <li>Object-oriented programming languages have method <em>dispatch</em> as a primary concern. Usually dispatch is performed on the method receiver or on argument types, but dispatch on (arbitrary) predicates is also possible. Read <a href="http://web.cs.ucla.edu/~todd/research/oopsla04.pdf">Todd Millstein&rsquo;s paper on practical predicate dispatch</a>. Compare and constrast the paper&rsquo;s JPred extension to Java with Erlang&rsquo;s use of guards with pattern-matching.
         <ol>
       </div>
 
