Add more exercises

--- a/more-exercises.html
+++ b/more-exercises.html
@@ -105,6 +105,10 @@
 
           <li>The first edition of the book focused entirely with text-based languages and thus left out discussion of visual languages such as Scratch and Snap. Implement the word frequency application in Snap.
 
+          <li>Investigate the language <a href="http://rtoal.github.io/ple/more-exercises.html">Forms/3</a>. Work through the examples in the guided tour. Build a 10x10 “multiplication table” in the language.
+
+          <li>What is <b>live programming</b>? Does liveness apply to programming languages or just to programming? Do any languages advertise themselves as being more <em>live</em> than others?
+
           <li>The language <a href="http://www.subtext-lang.org/">Subtext</a> purports to be a &ldquo;ongoing experiment in radically simplified programming...<em>not</em> a Domain Specific Language but rather a general purpose language designed from the ground up to make application programming radically simpler and easier.&rdquo; Build a small application in Subtext. How does it differ from more conventional languages?
 
           <li>We gave a brief mention and a short example program in GNU Smalltalk in Chapter&nbsp;13. There exist several other Smalltalk dialects, of course. Implement the GNU example in <a href="http://squeak.org/">Squeak</a>.
