Two more exercises

--- a/more-exercises.html
+++ b/more-exercises.html
@@ -130,6 +130,10 @@
           <li>We covered both 32-bit (single-precision) and 64-bit (double-precision) floating point type in our appendix on numbers. However, some languages include <em>minifloats</em>, <em>quadruple-precision</em>, and <em>octuple-precision</em> floats. For each type, give the number of bits in the representation, as well as the largest possible representable value.
 
           <li>Object-oriented programming languages have method <em>dispatch</em> as a primary concern. Usually dispatch is performed on the method receiver or on argument types, but dispatch on (arbitrary) predicates is also possible. Read <a href="http://web.cs.ucla.edu/~todd/research/oopsla04.pdf">Todd Millstein&rsquo;s paper on practical predicate dispatch</a>. Compare and constrast the paper&rsquo;s JPred extension to Java with Erlang&rsquo;s use of guards with pattern-matching.
+
+          <li>Read this <a href="https://www.innoq.com/en/blog/fp-vs-oo/">short essay on functional vs. object-orientation</a>. Summarize the main points of the essay.
+
+          <li>When, exactly, in JavaScript, <em>must</em> you call <code>super</code> in a constructor?
         <ol>
       </div>
 
